<resources>
    <string name="app_name">CodeforcesClient</string>
    <string name="nav_menu_problemset">Problemsets</string>
    <string name="nav_menu_contests">Contests</string>
    <string name="nav_menu_rating">Rating</string>
    <string name="nav_menu_gym">Gym</string>
    <string name="nav_menu_menu">Menu</string>
    <string name="detail_info">detail info</string>
    <string name="contest_item_starting_at">Starting at:</string>
    <string name="contest_item_duration">Duration:</string>
    <string name="contest_rating_label">Contest rating:</string>
    <string name="contribution_label">Contribution:</string>
    <string name="friends_label">Friends:</string>
</resources>